# ros-bridge

carla_ros_bridge/launch/: carla_ros_bridge_with_example_ego_vehicle.launch
carla_ros_bridge/src/carla_ros_bridge/: bridge.py  traffic_participant.py
t4ac_control_to_throttle/: CMakeLists.txt  package.xml
t4ac_control_to_throttle/launch/: control_to_throttle.launch
t4ac_control_to_throttle/src/: t4ac_control_to_throttle_node.py
